--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "1-lesson",
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,9 +21,15 @@
     "@types/react-dom": "^18.0.7",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.4",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.6.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.13",
     "typescript": "^4.8.4",
     "uuid": "^11.0.3",
@@ -47,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "3.5.3"
   }
 }
